--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -30,6 +30,7 @@ li {
 }
 
 .container {
+  width: 100%;
   max-width: 1240px;
   margin: 0 auto;
   position: relative;
@@ -254,10 +255,6 @@ li {
   z-index: 3;
 }
 
-.header-menu {
-  display: none;
-}
-
 .header-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -269,12 +266,155 @@ li {
   border-bottom: 1px solid #eaeaea;
 }
 
+.header-nav span {
+  display: none;
+}
+
 .header-nav a {
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   color: #191919;
+}
+
+.new-header {
+  position: fixed;
+  top: -100%;
+  background-color: #ffffff;
+}
+
+.new-header.clone {
+  width: 100%;
+  max-width: 1240px;
+  top: 0;
+  z-index: 100;
+}
+
+.new-header.clone .header__logo a {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.new-header.clone .header__contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 570px;
+  width: 100%;
+}
+
+.new-header.clone .header-menu {
+  margin-left: 0;
+}
+
+.new-header.clone .header__call {
+  min-width: 150px;
+}
+
+.new-header.clone .header__call a {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  color: #d44343;
+  margin-top: 10px;
+}
+
+.open-popup {
+  background-color: #699;
+  color: white;
+  padding: 12px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  width: 180px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  padding-top: 10px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fff;
+  margin: auto;
+  padding: 10px;
+  width: 90%;
+  -webkit-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
+          box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
+  -webkit-animation-name: animatefade;
+          animation-name: animatefade;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+}
+
+.header-modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-modal a {
+  text-decoration: none;
+  padding: 10px 0;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #191919;
+}
+
+@-webkit-keyframes animatefade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes animatefade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.close {
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  color: #191919;
+  top: 4px;
+  right: 20px;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 .header-menu {
@@ -1931,6 +2071,10 @@ li {
   .container {
     padding: 0 15px;
   }
+  .container .header__wrap {
+    width: 100%;
+    max-width: 1200px;
+  }
   .page-wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1942,6 +2086,16 @@ li {
 }
 
 @media (max-width: 1230px) {
+  .new-header .header__wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .new-header .header__wrap .header__search {
+    margin-top: 20px;
+  }
   .coll__card {
     margin: 0 10px;
   }
@@ -2190,15 +2344,6 @@ li {
     width: 100%;
     margin: 10px auto;
   }
-  .header-nav.show {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    position: absolute;
-    z-index: 10;
-  }
   .header-menu {
     display: block;
   }
@@ -2343,14 +2488,15 @@ li {
 }
 
 @media (max-width: 638px) {
+  .new-header.clone .header__wrap .header__contacts {
+    margin: 0 auto;
+  }
   .slider-new {
     width: 80%;
     margin: 0 auto;
   }
-  .slider-new .slider-new__arrows,
-  .slider-new .slider-new__prev,
-  .slider-new .slider-new__next {
-    display: none;
+  .slider-new .slider-new__prev {
+    right: 45px;
   }
   .header__search-input {
     margin-left: 10px;
@@ -2417,6 +2563,15 @@ li {
         flex-wrap: wrap;
     -ms-flex-pack: distribute;
         justify-content: space-around;
+  }
+  .new-header.clone .header__wrap .header__contacts {
+    max-width: 270px;
+  }
+  .new-header.clone .header__wrap .header__contacts .header__adr {
+    display: none;
+  }
+  .new-header.clone .header__wrap .header__search .header__call {
+    display: none;
   }
   .slider-top__item-text {
     position: relative;
@@ -2553,6 +2708,21 @@ li {
   }
   .header__adr-text a {
     margin-right: 20px;
+  }
+  .new-header.clone .header__wrap {
+    width: 92%;
+    max-width: 350px;
+  }
+  .new-header.clone .header__wrap .header__contacts {
+    max-width: 250px;
+  }
+  .new-header.clone .header__wrap .header__contacts .header__logo {
+    margin-bottom: 0;
+  }
+  .new-header.clone .header__wrap .header__searh-wrap {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .slider-top__item-text h1 {
     font-size: 45px;
