Minimal mobile header

--- a/css/main.css
+++ b/css/main.css
@@ -2632,6 +2632,12 @@ li {
   .header-menu {
     margin-left: 25px;
   }
+  .new-header .header__wrap {
+    padding: 10px 0;
+  }
+  .new-header .header__wrap .header__search {
+    display: none;
+  }
   .slider-news h2 {
     margin: 0 auto 40px;
   }
