--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -177,45 +177,53 @@
 
 // New-Header ================
 
+
 .new-header {
 	position: fixed;
 	top: -100%;
 	background-color: #ffffff;
+	width: 100%;
 
 	&.clone {
-		width: 100%;
-		max-width: 1240px;
+		background-color: #ffffff;
 		top: 0;
 		z-index: 100;
 
-		& .header__logo {
-			& a {
-				display: inline-block;
-				margin-bottom: 10px;
-			}
-		}
-
-		& .header__contacts {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			max-width: 570px;
+		& .header__wrap {
 			width: 100%;
-		}
+			max-width: 1240px;
+			margin: 0 auto;
+			border-bottom: none;
 
-		& .header-menu {
-			margin-left: 0;
-		}
+			& .header__logo {
+				& a {
+					display: inline-block;
+					margin-bottom: 10px;
+				}
+			}
 
-		& .header__call {
-			min-width: 150px;
+			& .header__contacts {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				max-width: 570px;
+				width: 100%;
+			}
 
-			& a {
-				font-family: 'Montserrat', sans-serif;
-				font-weight: 500;
-				font-size: 12px;
-				color: $red-link;
-				margin-top: 10px;
+			& .header-menu {
+				margin-left: 0;
+			}
+
+			& .header__call {
+				min-width: 150px;
+
+				& a {
+					font-family: 'Montserrat', sans-serif;
+					font-weight: 500;
+					font-size: 12px;
+					color: $red-link;
+					margin-top: 10px;
+				}
 			}
 		}
 	}
@@ -240,7 +248,7 @@
 .modal {
 	display: none;
 	position: fixed;
-	z-index: 100;
+	z-index: 150;
 	padding-top: 10px;
 	left: 0;
 	top: 0;
