--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -194,6 +194,7 @@
 			max-width: 1240px;
 			margin: 0 auto;
 			border-bottom: none;
+			box-shadow: 0px 20px 40px rgba($black, .1);
 
 			& .header__logo {
 				& a {
