--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -8,6 +8,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Oswald', sans-serif;
+  background-color: white;
 }
 
 p {
@@ -391,7 +392,8 @@ li {
   text-decoration: none;
   padding: 10px 0;
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   color: #191919;
@@ -972,7 +974,8 @@ li {
 }
 
 .footer a {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 500;
   font-size: 12px;
   color: #d44343;
@@ -1030,7 +1033,8 @@ li {
 }
 
 .footer__work-text {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #191919;
@@ -1074,13 +1078,15 @@ li {
 
 .footer__police a {
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-size: 14px;
   color: #3d3d3d;
 }
 
 .filter-size h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 500;
   font-size: 27px;
 }
@@ -1101,7 +1107,8 @@ li {
 }
 
 .for-brand__title h3 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 500;
   font-size: 17px;
   color: #3d3d3d;
@@ -1126,7 +1133,8 @@ li {
 }
 
 .check__label {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 400;
   font-size: 13px;
   color: #3d3d3d;
@@ -1174,7 +1182,8 @@ li {
 }
 
 .for-price h3 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 500;
   font-size: 17px;
   color: #3d3d3d;
@@ -1193,7 +1202,8 @@ li {
 }
 
 .for-size h3 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 500;
   font-size: 17px;
   color: #3d3d3d;
@@ -1228,7 +1238,8 @@ li {
 }
 
 .for-size__list .check__label {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 400;
   font-size: 15px;
   text-transform: uppercase;
@@ -1280,7 +1291,8 @@ li {
 }
 
 .for-color h3 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 500;
   font-size: 17px;
   color: #3d3d3d;
@@ -1477,7 +1489,8 @@ li {
 
 .showcase-sort {
   padding: 23px 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #3d3d3d;
@@ -1647,7 +1660,8 @@ li {
   background-color: #9b9b9b;
   width: 160px;
   height: 30px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 500;
   font-size: 12px;
   color: #fff;
@@ -1679,7 +1693,8 @@ li {
   border-radius: 3px;
   background-color: #e1e1e1;
   color: #191919;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 500;
   font-size: 12px;
   display: -webkit-box;
@@ -1700,7 +1715,8 @@ li {
 }
 
 .product-item__size-descr h3 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
@@ -1710,7 +1726,8 @@ li {
 .product-item__size-descr p {
   width: 100%;
   max-width: 660px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 400;
   font-size: 14px;
   color: #3d3d3d;
@@ -1724,7 +1741,8 @@ li {
   display: -ms-flexbox;
   display: flex;
   background-color: #f8f8f8;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 400;
   font-size: 12px;
   color: #191919;
@@ -1799,7 +1817,8 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
@@ -1824,7 +1843,8 @@ li {
 }
 
 .size-button_pay a {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
@@ -1936,7 +1956,8 @@ li {
 }
 
 .contacts {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+ sans-serif;
 }
 
 .contacts h2 {
